[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.8", features = ["flamegraph"] }

[lib]
name = "wyd2encdec"
path = "src/lib.rs"

[[bin]]
name = "rust"

[[bench]]
name = "decrypt_bench"
harness = false

[profile.bench]
opt-level = 3
